--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -84,7 +84,7 @@
         </a>
         <a id="add" *ngIf="isAdminPage" (click)="addNewPlace()" mat-list-item>
             <mat-icon mat-list-avatar>
-                add_circle_outline
+                add_circle
             </mat-icon>
             <h3 mat-line *ngIf="showFiller">
                 Utwórz
