--- a/src/app/components/add-place/add-place.component.html
+++ b/src/app/components/add-place/add-place.component.html
@@ -21,10 +21,12 @@
             </mat-form-field>
 
             <mat-form-field class="full-width-input" appearance="outline" color="accent">
-                <mat-label> Kategoria </mat-label>
-                <mat-select formControlName="category">
-                    <mat-option *ngFor="let category of categories" [value]="category">{{category.name}}
-                    </mat-option>
+                <mat-label>Kategoria obiektu</mat-label>
+                <mat-select
+                    matInput
+                    formControlName="category" required>
+                  <mat-option value="'Wszystkie'"> Wszystkie </mat-option>
+                  <mat-option *ngFor="let category of categoryService.categories$ | async" [value]="category">{{ category.name }}</mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field class="full-width-input" appearance="outline" color="accent">
@@ -54,71 +56,71 @@
                 <td class="day-of-week">
                     <div class="one-line">
                         <mat-label class="day-label"> Poniedziałek od: &nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="mondayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="mondayFrom" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                     <div class="one-line">
                         <mat-label class="day-label"> Poniedziałek do: &nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="mondayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="mondayTo" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                 </td>
                 <td class="day-of-week">
                     <div class="one-line">
                         <mat-label class="day-label"> Wtorek od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="tuesdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="tuesdayFrom" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                     <div class="one-line">
                         <mat-label class="day-label"> Wtorek do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="tuesdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="tuesdayTo" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                 </td>
                 <td class="day-of-week">
                     <div class="one-line">
                         <mat-label class="day-label"> Środa od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="wednesdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="wednesdayFrom" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                     <div class="one-line">
                         <mat-label class="day-label"> Środa do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="wednesdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="wednesdayTo" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                 </td>
                 <td class="day-of-week">
                     <div class="one-line">
                         <mat-label class="day-label"> Czwartek od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="thursdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="thursdayFrom" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                     <div class="one-line">
                         <mat-label class="day-label"> Czwartek do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="thursdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="thursdayTo" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                 </td>
                 <td class="day-of-week">
                     <div class="one-line">
                         <mat-label class="day-label"> Piątek od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="fridayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="fridayFrom" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                     <div class="one-line">
                         <mat-label class="day-label"> Piątek do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="fridayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="fridayTo" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                 </td>
                 <td class="day-of-week">
                     <div class="one-line">
                         <mat-label class="day-label"> Sobota od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="saturdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="saturdayFrom" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                     <div class="one-line">
                         <mat-label class="day-label"> Sobota do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="saturdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="saturdayTo" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                 </td>
                 <td class="day-of-week">
                     <div class="one-line">
                         <mat-label class="day-label"> Niedziela od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="sundayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="sundayFrom" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                     <div class="one-line">
                         <mat-label class="day-label"> Niedziela do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
-                        <ngx-mat-timepicker formControlName="sundayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                        <ngx-mat-timepicker formControlName="sundayTo" [showSpinners]="false" required></ngx-mat-timepicker>
                     </div>
                 </td>
             </tr></table>
