--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -5,18 +5,20 @@
               <mat-label>Nazwa obiektu</mat-label>
               <input 
                 matInput 
+                (keyup)="applyFilter($event)"
                 formControlName="placeName">
               <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
           </p>
           <p>
             <mat-form-field id="place-category" appearance="outline">
-                <mat-label>Kategoria obiektu</mat-label>
-                <mat-select
-                    matInput
-                    formControlName="placeCategory">
-                  <mat-option value="option">Obiekty sportowe</mat-option>
-                </mat-select>
+              <mat-label>Kategoria obiektu</mat-label>
+              <mat-select
+                  matInput
+                  formControlName="placeCategory">
+                <mat-option (click)="searchFilter('')" value="'Wszystkie'"></mat-option>
+                <mat-option (click)="searchFilter(category.name)" *ngFor="let category of categoryService.categories$ | async" [value]="category">{{ category.name }}</mat-option>
+              </mat-select>
             </mat-form-field>
           </p>
     </div>
@@ -26,10 +28,6 @@
     <div *ngIf="isSpinnerDisplayed" class="spinner-wrapper">
       <mat-spinner color="accent"></mat-spinner>
     </div>
-    <!-- <mat-form-field>
-      <mat-label>table.filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="table.filter-example" #input>
-    </mat-form-field> -->
     <div id="table-wrapper" class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource"
        matSort 
@@ -62,7 +60,7 @@
 
         <ng-container matColumnDef="category">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Kategoria </th>
-            <td mat-cell *matCellDef="let element"> {{element.category}}</td>
+            <td mat-cell *matCellDef="let element"> {{element.categoryName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
@@ -85,6 +83,6 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
       </table>
-      <!-- <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator> -->
+      <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
     </div>
   </div>
