--- a/src/app/components/place-details/place-details.component.scss
+++ b/src/app/components/place-details/place-details.component.scss
@@ -14,17 +14,13 @@
     .mat-grid-list {
         width: 100%;
         height: 100%;
-        // max-width: 100rem;
-        // width: 1600px;
-        // width: 100rem;
-        // height: 8rem;
-    
+
         .mat-card {
             width: 100%;
             height: 100%;
             border-radius: 0;
             border: none;
-            cursor: pointer;
+            cursor: default;
 
             .warn {
                 color: red;
