--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,7 @@
 <div id="search-container">
+  <div *ngIf="categoryService.spinner$ || placeService.spinner$ | async" class="spinner-wrapper">
+    <mat-spinner color="accent"></mat-spinner>
+</div>
     <div [formGroup]="searchForm" id="search-fields" class="mat-elevation-z1">
         <p>
             <mat-form-field id="place-name" appearance="outline">
@@ -29,17 +32,17 @@
                     <mat-card-title>{{ place.name }}</mat-card-title>
                     <mat-card-subtitle>{{ place.categoryName }}</mat-card-subtitle>
                   </mat-card-header>
-                  <img mat-card-image src="{{place.imageUrl}}" alt="Photo of place" (click)="openPlaceDetailsDialog(place)">
+                  <img mat-card-image src="{{place?.imageUrl}}" alt="Photo of place" (click)="openPlaceDetailsDialog(place)">
                   <mat-card-content (click)="openPlaceDetailsDialog(place)">
                     <p>{{ place.description }}</p>
                   </mat-card-content>
                   <mat-card-actions>
                     <mat-progress-bar mode="determinate" [value]="place.lastOccupancyTo?.percentageOccupancy"></mat-progress-bar>
                     <p>{{ place.lastOccupancyTo?.percentageOccupancy }}%</p>
-                    <mat-icon mat-list-avatar *ngIf="place.isFavourite" (click)="toggleFavorite(place)">
+                    <mat-icon mat-list-avatar *ngIf="place.favourite" (click)="toggleFavorite(place)">
                         favorite
                     </mat-icon>
-                    <mat-icon mat-list-avatar *ngIf="!place.isFavourite" (click)="toggleFavorite(place)">
+                    <mat-icon mat-list-avatar *ngIf="!place.favourite" (click)="toggleFavorite(place)">
                         favorite_border
                     </mat-icon>
                 </mat-card-actions>
