--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="places-table">
-    <div *ngIf="isSpinnerDisplayed" class="spinner-wrapper">
+    <div *ngIf="categoryService.spinner$ | async" class="spinner-wrapper">
       <mat-spinner color="accent"></mat-spinner>
     </div>
     <div id="table-wrapper" class="mat-elevation-z8">
