--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -2,6 +2,18 @@
     display: flex;
     flex-direction: column;
 
+    .spinner-wrapper {
+        position: absolute !important;
+        z-index: 3;
+        height: 100%;
+        width: 100% !important;
+        padding: 0!important;
+        background-color: rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     #search-fields {
         height: fit-content;
         padding-left: 1.5%;
