--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -68,10 +68,10 @@
           <td mat-cell *matCellDef="let element" class="actions-container">
             <div>
               <div>
-                <button mat-icon-button color="primary" (click)="modifyPlace(element)">
+                <button *ngxPermissionsOnly="['EDIT_PLACE']" mat-icon-button color="primary" (click)="modifyPlace(element)">
                   <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button color="warn" (click)="deletePlace(element)">
+                <button *ngxPermissionsOnly="['DELETE_PLACE']" mat-icon-button color="warn" (click)="deletePlace(element)">
                   <mat-icon>delete</mat-icon>
                 </button>
               </div>
