--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,8 +1,8 @@
+<div *ngIf="userService.spinner$ | async" class="spinner-wrapper">
+    <mat-spinner color="accent"></mat-spinner>
+</div>
 <div id="registration-container">
     <div id="registration">
-        <div *ngIf="isSpinnerDisplayed" class="spinner-wrapper">
-            <mat-spinner color="accent"></mat-spinner>
-        </div>
         <form [formGroup]="registerForm" (ngSubmit)="register()">
                 <h2 id="registration-title"> Rejestracja </h2>
                 <div id="mat-form-container">
