--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -1,5 +1,17 @@
 @import "../../../variables.scss";
 
+.spinner-wrapper {
+    position: absolute !important;
+    z-index: 3;
+    height: 100%;
+    width: 100% !important;
+    padding: 0!important;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #registration-container {
     display: flex;
     justify-content: center;
@@ -14,17 +26,6 @@
 
         #password-form {
             width: 100%;
-        }
-
-        .spinner-wrapper {
-            position: absolute !important;
-            z-index: 3;
-            width: 100% !important;
-            height: 100% !important;
-            background-color: rgba(0, 0, 0, 0.1);
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
     
         #registration-title {
