--- a/src/app/components/add-place/add-place.component.scss
+++ b/src/app/components/add-place/add-place.component.scss
@@ -82,6 +82,7 @@
 }
 
   ::ng-deep .mat-dialog-container {
-    height: fit-content;
-    overflow-y: auto;
+    height: fit-content !important;
+    overflow-y: auto !important;
+    padding: 20px !important;
 }
