--- a/src/app/components/add-place/add-place.component.html
+++ b/src/app/components/add-place/add-place.component.html
@@ -53,7 +53,14 @@
 
             <div class="uploadfilecontainer" (click)="fileInput.click()" appDragDrop (onFileDropped)="uploadFile($event)">
                 <input hidden type="file" #fileInput (change)="uploadFile($event)">
-              </div>
+            </div>
+            <div class="files-list" *ngFor="let file of files;let i= index">
+                <p> {{ file.name }} </p>
+                <button class="delete-file" (click)="deleteAttachment(i)">
+                  <img src="../../../assets/Recycle_Bin_Full.png">
+                </button>
+            </div>
+
             <table class="example-full-width" cellspacing="0"><tr>
                 <td class="day-of-week">
                     <div class="one-line">
