--- a/src/app/components/add-place/add-place.component.scss
+++ b/src/app/components/add-place/add-place.component.scss
@@ -60,6 +60,28 @@
           border-radius: 10px;
       }
 
+      .files-list {
+        display: flex;
+        justify-content: space-between;
+        width: 80%;
+        margin: 10px auto;
+        background: #ffffff;
+        border: 1px dashed;
+        border-radius: 12px;
+        padding: 5px;
+        color: #1c8adb;
+    }
+    
+    .files-list .delete-file {
+        background: transparent;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .files-list .delete-file img {
+        width: 30px;
+    }
+
         .address-table {
           width: 100%;
           ::ng-deep .mat-form-field-wrapper {
