--- a/src/app/components/modify-place/modify-place.component.scss
+++ b/src/app/components/modify-place/modify-place.component.scss
@@ -48,6 +48,40 @@
           }
         }
 
+        .uploadfilecontainer {
+          background-image: url("../../../assets/cloud-2044823_960_720.png");
+          background-repeat: no-repeat;
+          background-size: 100px;
+          background-position: center;
+          height: 200px;
+          width: 80%;
+          margin: 20px auto;
+          border: 2px dashed #12c0ef;
+          border-radius: 10px;
+      }
+
+      .files-list {
+        display: flex;
+        justify-content: space-between;
+        width: 80%;
+        margin: 10px auto;
+        background: #ffffff;
+        border: 1px dashed;
+        border-radius: 12px;
+        padding: 5px;
+        color: #1c8adb;
+    }
+    
+    .files-list .delete-file {
+        background: transparent;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .files-list .delete-file img {
+        width: 30px;
+    }
+
         .address-table {
           width: 100%;
           ::ng-deep .mat-form-field-wrapper {
