--- a/src/app/components/delete-place/delete-place.component.html
+++ b/src/app/components/delete-place/delete-place.component.html
@@ -2,7 +2,7 @@
     <div id="modal-top">
         <h2 class="mat-h2"> Czy chcesz usunać miejscówkę? </h2>
         <button id="close" mat-icon-button (click)="closeDialog()">
-            <mat-icon>close</mat-icon>
+            <mat-icon svgIcon="close"></mat-icon>
         </button>
     </div>
     <form>
