--- a/src/app/components/place-details/place-details.component.scss
+++ b/src/app/components/place-details/place-details.component.scss
@@ -40,8 +40,9 @@
                 display: flex;
                 flex-direction: row;
 
-                .material-icons {
-                    font-size: 30px;
+                .mat-icon {
+                    height: 30px;
+                    width: 30px;
                 }
             }
 
@@ -123,11 +124,12 @@
                     margin-top: 2%;
                 }
     
-                .material-icons {
-                    font-size: 36px;
+                .mat-icon {
+                    height: 36px;
+                    width: 36px;
                     cursor: pointer;
                     margin-right: 6%;
-                    margin-top: 0;
+                    margin-top: 1%;
                 }
             }
         }
