--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -68,11 +68,12 @@
                     margin-top: 2%;
                 }
 
-                .material-icons {
-                    font-size: 36px;
+                .mat-icon {
+                    height: 28px;
+                    width: 28px;
                     cursor: pointer;
-                    margin-right: 6%;
-                    margin-top: 0;
+                    margin-right: 3%;
+                    margin-top: 1%;
                 }
             }
         }
