--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,6 @@
 // have to load a single css file for Angular Material in your app.
 
 // Fonts
-@import 'https://fonts.googleapis.com/css?family=Material+Icons';
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
      
 $fontConfig: (
@@ -254,7 +253,8 @@ $altTheme: (
 }
 
 .material-icons {
-  font-size: 24px;
+  height: 24px;
+  width: 24px;
   font-family: 'Material Icons', 'Material Icons';  
   .mat-badge-content {
     font-family: 'Roboto';
