js prod optimalization

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,8 @@
                             type="password" name="password" required>
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                             [attr.aria-pressed]="hide">
-                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            <mat-icon *ngIf="hide" svgIcon="visibility_off"></mat-icon>
+                            <mat-icon *ngIf="!hide" svgIcon="visibility"></mat-icon>
                         </button>
                     </mat-form-field>
                     <button mat-raised-button type="submit" id="login-button"
